# swarm-slam-eval

./: .gitignore  README.md
datasets/: README.md
datasets/GrAco/: config.yaml
datasets/S3E/: config.yaml
src/swarm_slam_eval/: package.xml  setup.cfg  setup.py
src/swarm_slam_eval/config/: cslam.yaml  cslam_s3e_lidar_stereo.yaml
src/swarm_slam_eval/launch/: cslam.launch.py  graco.launch.py  multi.launch.py  s3e.launch.py
src/swarm_slam_eval/swarm_slam_eval/: bag_reader.py  qos_profiles.py  sync.py
src/swarm_slam_eval/swarm_slam_eval/adapters/: cslam.py
src/swarm_slam_eval/swarm_slam_eval/evaluation/: pose_graph.py
src/swarm_slam_eval/swarm_slam_eval/frontend/: ground_truth.py  imu.py  odometry.py
src/swarm_slam_eval/swarm_slam_eval/odometry/: ground_truth.py  imu.py  odometry.py
src/swarm_slam_odometry/: package.xml  setup.cfg  setup.py
src/swarm_slam_odometry/launch/: multi.launch.py
src/swarm_slam_odometry/swarm_slam_odometry/: bag_reader.py  odometry.py  sync.py
src/swarm_slam_visualizer/: package.xml  setup.cfg  setup.py
src/swarm_slam_visualizer/config/: default.rviz
src/swarm_slam_visualizer/launch/: visualizer.launch.py
src/swarm_slam_visualizer/swarm_slam_visualizer/: visualizer.py
utils/: config_generator.py  evaluate_trajectory.py  get_first_pose.py  run_eval.py
