<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swarm_slam_eval</name>
  <version>0.0.0</version>
  <description>swarm slam evaluation package</description>
  <maintainer email="56997587+Skuddo@users.noreply.github.com">Skuddo</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cslam</depend>
  <depend>cslam_common_interfaces</depend>
  <depend>rtabmap_odom</depend>
  <depend>tf2_ros</depend>
    
  <exec_depend>python3-scipy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
